--- a/egg/zoo/referential_language/notebooks/plot_boxes_interactions.ipynb
+++ b/egg/zoo/referential_language/notebooks/plot_boxes_interactions.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bae17a5",
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6224686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7283531f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +110,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3445c0c0",
    "metadata": {},
    "source": [
     "### Put interaction paths here"
@@ -122,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a8196f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "57289031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b1d8131",
    "metadata": {},
    "source": [
     "### Check which symbols have been used"
@@ -152,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "170d9462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7874214f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +183,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ce2f0d",
    "metadata": {},
    "source": [
     "#### We save the most frequent symbol pairs, first symbols, and second symbols"
@@ -201,7 +191,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "352676c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +200,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "546e2914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +208,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e88a72db",
    "metadata": {},
    "source": [
     "### Define variables and functions for the plotting"
@@ -229,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "65127647",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bfe9c0bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "61017934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +271,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a849c5cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +281,7 @@
     "        aqua_box(other_obj)                                       \n",
     "    if idx_other_obj == rcv_idx_TO:\n",
     "        green_box(other_obj)                                     \n",
-    "    if idx_other_obj == torch.argmax(att_out_DA):\n",
+    "        if idx_other_obj == torch.argmax(att_out_DA):\n",
     "        fuchsia_box(other_obj)                                \n",
     "    if idx_obj != idx_other_obj:\n",
     "        blue_box(other_obj)"
@@ -307,7 +290,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "171693fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +302,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89319f4",
    "metadata": {},
    "source": [
     "## Visual analysis of symbol pairs"
@@ -329,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e5709e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +376,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c558a183",
    "metadata": {
     "collapsed": true
    },
@@ -545,7 +524,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "efeef123",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +654,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a98b48a6",
    "metadata": {},
    "source": [
     "## Visual analysis of one symbol"
@@ -685,7 +662,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "64ead4f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +728,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e7b23e5d",
    "metadata": {
     "collapsed": true
    },
@@ -805,7 +780,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3d19b736",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1060,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e1fc38",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1094,7 +1067,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1108,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
